resolve comment two - namespacing

--- a/client/src/components/Forum/Comment/Comment.css
+++ b/client/src/components/Forum/Comment/Comment.css
@@ -11,11 +11,6 @@
   padding: 1.2rem;
 }
 
-img{
-  height: 1.5rem;
-  padding: 0;
-}
-
 .Comment__name {
   margin: 0;
 }
